--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ deploy:
   skip_cleanup: true
   overwrite: true
   on:
-    tags: false
+    tags: true
     branch: master
 cache:
   directories:
