--- a/eagle-server/pom.xml
+++ b/eagle-server/pom.xml
@@ -277,6 +277,12 @@
 
                 <dependency>
                     <groupId>org.apache.eagle</groupId>
+                    <artifactId>eagle-security-oozie-beam-auditlog</artifactId>
+                    <version>${project.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.eagle</groupId>
                     <artifactId>eagle-security-oozie-auditlog</artifactId>
                     <version>${project.version}</version>
                 </dependency>
