--- a/eagle-server/src/main/resources/application.conf
+++ b/eagle-server/src/main/resources/application.conf
@@ -12,128 +12,75 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 # ---------------------------------------------
 # Eagle REST Web Service Configuration
 # ---------------------------------------------
 service {
   env = "testing"
-  host = "localhost"
+  host = "192.168.7.192"
   port = 9090
   username = "admin"
   password = "secret"
   readTimeOutSeconds = 60
   context = "/rest"
-  timezone = "UTC"
+  timezone = "Asia/Shanghai"
 }
-
 zookeeper {
-  zkQuorum = "localhost:2181"
+  zkQuorum = "192.168.26.4:2181"
   zkSessionTimeoutMs : 15000
   zkRetryTimes : 3
   zkRetryInterval : 20000
 }
-
 # ---------------------------------------------
 # Eagle Deep Storage Configuration
 # ---------------------------------------------
-
 storage {
-  # storage type: ["hbase","jdbc"]
-  # default is "hbase"
-  type = "hbase"
-
-  hbase {
-    autoCreateTable = true
-    
-    # hbase configuration: hbase.zookeeper.quorum
-    # default is "localhost"
-    zookeeperQuorum = "localhost"
-
-    # hbase configuration: hbase.zookeeper.property.clientPort
-    # default is 2181
-    zookeeperPropertyClientPort = 2181
-
-    # hbase configuration: zookeeper.znode.parent
-    # default is "/hbase"
-    zookeeperZnodeParent = "/hbase-unsecure"
-
-    # eagle web login profile: [sandbox, default]
-    # default is sandbox
-    tableNamePrefixedWithEnvironment = false
-
-    # eagle coprocessor enabled or not: [true, false]
-    # default is false
-    coprocessorEnabled = false
+  type = "jdbc"
+  jdbc {
+    adapter = "mysql"
+    username = "root"
+    password = root
+    database = eagle
+    connectionUrl = "jdbc:mysql://192.168.26.97:3306/eagle"
+    connectionProps = "encoding=UTF-8"
+    driverClass = "com.mysql.jdbc.Driver"
+    connectionMax = 8
   }
 }
-
 # ---------------------------------------------
 # Eagle Metadata Store Configuration
 # ---------------------------------------------
 metadata {
-  store = org.apache.eagle.metadata.service.memory.MemoryMetadataStore
+  store = org.apache.eagle.metadata.store.jdbc.JDBCMetadataStore
   jdbc {
     username = "root"
-    password = ""
+    password = "root"
     driverClassName = com.mysql.jdbc.Driver
-    database = "eagle"
-    connection = "jdbc:mysql://server.eagle.apache.org:3306/eagle?user=root"
+    connection = "jdbc:mysql://192.168.26.97:3306/eagle"
   }
 }
-
+connection = "jdbc:mysql://192.168.26.97:3306/eagle?user=root&password=root&createDatabaseIfNotExist=true"
+database = "eagle"
 # ---------------------------------------------
 # Eagle Application Configuration
 # ---------------------------------------------
 application {
-  stream {
-    provider = org.apache.eagle.app.messaging.KafkaStreamProvider
+  sink {
+    type = org.apache.eagle.app.sink.KafkaStreamSink
   }
   storm {
-    nimbusHost = "server.eagle.apache.org"
+    nimbusHost = "192.168.26.11"
     nimbusThriftPort = 6627
   }
-  updateStatus: {
-    initialDelay: 10
-    period: 10
-  }
-  healthCheck {
-    initialDelay = 30
-    period = 60
-    publisher {
-      publisherImpl = org.apache.eagle.app.service.impl.ApplicationHealthCheckEmailPublisher
-      dailySendHour = 11
-      mail.smtp.host = "mail.host.com"
-      mail.smtp.port = 25
-      mail.smtp.recipients = "someone@email.com"
-      mail.smtp.subject = "Eagle Application Health Check"
-      mail.smtp.template = "HealthCheckTemplate.vm"
-    }
-  }
-  mailService {
-    mailSmtpServer = "",
-    mailSmtpPort = 25,
-    mailSmtpAuth = "false"
-    //mailSmtpConn = "plaintext",
-    //mailSmtpUsername = ""
-    //mailSmtpPassword = ""
-    //mailSmtpDebug = false
-  }
-  dailyJobReport {
-    reportHourTime: 1
-    reportPeriodInHour: 12
-    numTopUsers : 10
-    jobOvertimeLimitInHour: 6
-    subject: "Job Report For 12 hours"
-    recipients: "nobody@abc.com"
-    template: "JobReportTemplate.vm"
-  }
 }
-
+metadataService {
+  host = "192.168.26.205",
+  port = 9090,
+  context = "/rest"
+}
 # ---------------------------------------------
 # Eagle Alert Engine Configuration
 # ---------------------------------------------
-
 # Coordinator Configuration
 coordinator {
   policiesPerBolt = 5
@@ -143,7 +90,7 @@ coordinator {
   topologyLoadUpbound = 0.8
   numOfAlertBoltsPerTopology = 5
   zkConfig {
-    zkQuorum = "server.eagle.apache.org:2181"
+    zkQuorum = "192.168.26.4:2181"
     zkRoot = "/alert"
     zkSessionTimeoutMs = 10000
     connectionTimeoutMs = 10000
@@ -151,14 +98,12 @@ coordinator {
     zkRetryInterval = 3000
   }
   metadataService {
-    host = "localhost",
+    host = "192.168.7.192",
     port = 9090,
     context = "/rest"
   }
   metadataDynamicCheck {
     initDelayMillis = 1000
     delayMillis = 30000
-    stateClearPeriodMin = 1440
-    stateReservedCapacity = 100
   }
 }
