[MINOR] Add repo about beam kafkaio8.

--- a/eagle-security/eagle-security-hbase-beam-auditlog/pom.xml
+++ b/eagle-security/eagle-security-hbase-beam-auditlog/pom.xml
@@ -44,7 +44,7 @@
             <groupId>beamkafka8</groupId>
             <artifactId>kafka8</artifactId>
             <version>1.0</version>
-            <systemPath>/usr/beamkafkaio8/sdks/java/io/kafka8/target/beam-sdks-java-io-kafka8-0.7.0-SNAPSHOT.jar</systemPath>
+            <systemPath>${project.basedir}/repo/beamkafka8/kafka8/1.0/beam-sdks-java-io-kafka8-0.7.0-SNAPSHOT.jar</systemPath>
             <scope>system</scope>
         </dependency>
         <dependency>
