--- a/eagle-security/pom.xml
+++ b/eagle-security/pom.xml
@@ -34,20 +34,18 @@
     <modules>
         <module>eagle-security-common</module>
         <module>eagle-security-hdfs-auditlog</module>
-        <module>eagle-security-hdfs-beam-auditlog</module>
         <module>eagle-security-hdfs-authlog</module>
-        <module>eagle-security-hdfs-beam-authlog</module>
         <module>eagle-security-maprfs-auditlog</module>
         <module>eagle-security-hive</module>
         <module>eagle-security-hive-web</module>
         <module>eagle-security-hdfs-web</module>
         <module>eagle-security-maprfs-web</module>
         <module>eagle-security-hbase-auditlog</module>
-        <module>eagle-security-hbase-beam-auditlog</module>
         <module>eagle-security-hbase-web</module>
         <module>eagle-metric-collection</module>
         <module>eagle-security-oozie-auditlog</module>
         <module>eagle-security-oozie-beam-auditlog</module>
         <module>eagle-security-oozie-web</module>
+        <module>eagle-security-beam</module>
     </modules>
 </project>
