--- a/eagle-server/pom.xml
+++ b/eagle-server/pom.xml
@@ -304,25 +304,14 @@
 
                 <dependency>
                     <groupId>org.apache.eagle</groupId>
+                    <artifactId>eagle-security-beam</artifactId>
+                    <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.eagle</groupId>
                     <artifactId>eagle-security-hdfs-auditlog</artifactId>
                     <version>${project.version}</version>
                 </dependency>
-                <dependency>
-                    <groupId>org.apache.eagle</groupId>
-                    <artifactId>eagle-security-hdfs-beam-auditlog</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.eagle</groupId>
-                    <artifactId>eagle-security-hdfs-beam-authlog</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.eagle</groupId>
-                    <artifactId>eagle-security-hbase-beam-auditlog</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-
                 <dependency>
                     <groupId>org.apache.eagle</groupId>
                     <artifactId>eagle-security-hdfs-web</artifactId>
